k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestion-projet-pro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gestion-projet-pro
  template:
    metadata:
      labels:
        app: gestion-projet-pro
    spec:

      containers:
        - name: gestion-projet-pro
          image: ghcr.io/hdkaramoko/gestion-projet-pro:0.1.0
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000

          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi

          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20
