k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gestion-projet-pro
spec:
  type: ClusterIP
  selector:
    app: gestion-projet-pro
  ports:
    - name: http
      port: 8000
      targetPort: 8000
