k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gestion-projet-pro
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  ingressClassName: nginx
  rules:
    - host: gestion-projets-pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gestion-projet-pro
                port:
                  number: 8000
  tls:
    - hosts:
        - gestion-projets-pro
